Fix: Radio alignment

--- a/frontend/src/app/features/components/user-management/user-details/user-details.component.scss
+++ b/frontend/src/app/features/components/user-management/user-details/user-details.component.scss
@@ -36,6 +36,7 @@
     .status-checkboxes {
         display: flex;
         gap: 12px;
+        padding-top: 12px;
     }
 
     .value-block {
@@ -43,10 +44,6 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
-
-        .label {}
-
-        .value {}
 
         .tags-block {
             .link-to-roles {
